Bug 13752 - smbcontrol <pid> debug/debuglevel/shutdown don't work with 'samba' processes
Summary: smbcontrol <pid> debug/debuglevel/shutdown don't work with 'samba' processes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.10.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-17 14:09 UTC by Stefan Metzmacher
Modified: 2019-02-08 09:32 UTC (History)
2 users (show)

See Also:


Attachments
Patches for v4-10-test (9.46 KB, patch)
2019-01-30 10:18 UTC, Stefan Metzmacher
bbaumbach: review+
Details
Patches for v4-9-test (9.47 KB, patch)
2019-01-30 10:19 UTC, Stefan Metzmacher
bbaumbach: review+
Details
Patches for v4-8-test (9.46 KB, patch)
2019-01-30 10:19 UTC, Stefan Metzmacher
bbaumbach: review+
Details
Backport for 4.7 (not for v4-7-test) (9.44 KB, text/plain)
2019-01-30 10:20 UTC, Stefan Metzmacher
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2019-01-17 14:09:55 UTC
It just looks like this:

# smbcontrol samba debuglevel
No replies received

The problem is that the imessaging code doesn't
implement the MSG_DEBUG and MSG_REQ_DEBUGLEVEL message
handlers.
Comment 1 Stefan Metzmacher 2019-01-30 10:18:41 UTC
Created attachment 14805 [details]
Patches for v4-10-test
Comment 2 Stefan Metzmacher 2019-01-30 10:19:06 UTC
Created attachment 14806 [details]
Patches for v4-9-test
Comment 3 Stefan Metzmacher 2019-01-30 10:19:34 UTC
Created attachment 14807 [details]
Patches for v4-8-test
Comment 4 Stefan Metzmacher 2019-01-30 10:20:40 UTC
Created attachment 14808 [details]
Backport for 4.7 (not for v4-7-test)
Comment 5 Karolin Seeger 2019-02-05 14:29:27 UTC
Pushed to autobuild-v4-{10,9,8}-test.
Comment 6 Karolin Seeger 2019-02-08 09:32:27 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to all branches.
Closing out bug report.

Thanks!